<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/basic_function_btn"
        style="@style/BasicBtnItemStyle"
        android:text="@string/basic_function_test"/>

    <Button
        android:id="@+id/performance_btn"
        style="@style/BasicBtnItemStyle"
        android:text="@string/performance_test"/>

    <Button
        android:id="@+id/safe_btn"
        style="@style/BasicBtnItemStyle"
        android:text="@string/safe_test"/>

    <Button
        android:id="@+id/limit_btn"
        style="@style/BasicBtnItemStyle"
        android:text="@string/limit_test"/>

    <Button
        android:id="@+id/other_btn"
        style="@style/BasicBtnItemStyle"
        android:text="@string/other_test"/>

    <TextView
        android:id="@+id/serial_tv"
        style="@style/BasicBtnItemStyle"
        android:text="@string/other_test"/>

</LinearLayout>
