<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Switch
            android:id="@+id/push_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="true"
            android:text="@string/push_start"/>
        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/clear_message"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffd7e7d7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="#ff000000"
            android:text="@string/alias"/>
        <EditText
            android:id="@+id/alias_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:hint="@string/alias_hint"
            android:textSize="12sp"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffd7e7d7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:text="@string/tags"/>
        <EditText
            android:id="@+id/tags_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ff000000"
            android:hint="@string/tags_hint"
            android:textSize="12sp"
            android:maxLines="1"/>
        <Button
            android:id="@+id/alias_and_tags_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:background="#ffd7f7f7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_mode_setting"
            android:textColor="@android:color/holo_red_dark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/debug_mode_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_mode_close" />
            <Button
                android:id="@+id/debug_mode_open_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_mode_open" />
            <Button
                android:id="@+id/debug_expert_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_mode_value"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#ff000000"
            android:text="@string/push_message"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textColor="#ff000000"
            android:text="@string/push_count"/>
        <TextView
            android:id="@+id/push_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"/>
    </LinearLayout>

    <ListView
        android:id="@+id/push_message_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
